--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,36 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Flask
+instance/
+*.log
+
+# Uploads & outputs
+uploads/
+output/
+
+# Word / Office temp files
+~$*.docx
+*.docx.lock
+
+# OS
+.DS_Store
+Thumbs.db
+
+# VS Code
+.vscode/
+
+# PyCharm
+.idea/
+
+# PDF & DOCX generated files
+*.pdf
+*.docx
+
+# dotenv
+.env
+
+# Entorno virtual
+venv/
+.venv/
